# obs-lottie-transition

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildspec.json
.github/workflows/: release.yml  tests.yml
cmake/: build-thorvg.sh
cmake/macos/: helpers.cmake
data/: lottie_transition.effect
data/locale/: en-US.ini
data/web/: backend-plan.js  bridge-core.js  bridge.js  index.html  package-lock.json  package.json
data/web/test/: all.test.js  backend-plan.test.js  bridge-core.test.js  examples.test.js  native-slot-e2e.test.js
examples/: AUTHORING-GUIDE.md  CREDITS.md  circle-reveal.json  circle-transition-lf.json  credit-card-shuffle-lf.json  diagonal-band.json  ibm-exploration-01-lf.json  menu-page-transition-lf.json  simple-wipe.json  slide-and-mask.json  sliding-window.json  spotlight-zoom.json
src/: lottie-backend.c  lottie-backend.h  lottie-slot-eval.cpp  lottie-slot-eval.hpp  lottie-thorvg.cpp  lottie-thorvg.h  lottie-transition.c  lottie-transition.h  plugin-support.c.in  plugin-support.h  transform-decode.c  transform-decode.h
tests/: OBS_E2E.md  lottie-backend-test.c  lottie-slot-eval-cli.cpp  lottie-slot-eval-test.cpp  obs-e2e-assert.js  obs-e2e-matrix.js  obs-e2e-runner.js  obs-perf-matrix.js  transform-decode-cli.c  transform-decode-test.c
tests/macos/: obs-ui-smoke.swift
